# concord-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  of-concord-fastapi.yml  of-concord.yml  package-lock.json  push-images-to-local-registry.sh  pyproject.toml  requirements.txt  setup-local-cluster.sh  starlette-backend.yml
app/: main.py
backend/: Dockerfile  pyproject.toml
backend/src/: bench.py  concord_helper.py  data_transforms.py  db.py  main.py  performance_metrics.py
backend/src/zmq/: mtclient.py  mtserver.py
backend/tests/: test_db.py  test_main.py
concord/: Dockerfile  Dockerfile_db  alembic.ini  main.py  pyproject.toml
concord/jupyter/: concord-notebook.ipynb
concord/scripts/: ingest_data.py  prestart.sh  rundev.py
concord/src/: concord_helper.py  config.py  db.py  flatData.csv  main.py  mock_db.py  performance_metrics.py  schemas.py  service.py  test_main.py
concord/src/db/: crud.py  database.py  models.py
concord/src/db/migrations/: env.py
concord/src/db/migrations/versions/: 26801bcfd223_create_account_table.py  3c3544083812_initial_setup.py  ad4a74dcf82e_test_setup.py  c26f18b68456_add_stocks.py  dfc071d5a55c_added_account_table.py
concord/tests/: test_db.py  test_main.py  test_performance_metrics.py  test_service.py
frontend/: package-lock.json  package.json  rollup.config.js
manifests/: concord.yaml  local.yaml  openfaas.yml
middleware/: pyproject.toml
middleware/jupyter/: Untitled.ipynb
middleware/src/: concord_helper.py  helper.py  main.py  service.py  test_main.py
notebooks/: MafAnalysis.ipynb  PreliminaryAnalysis.ipynb
of-concord/: handler.py
of-concord-fastapi/: handler.py  requirements.txt  test_handler.py
scripts/: buildpush-dockerimages.sh  (+6 more)
(+35 files in other folders)
