[tool.poetry]
name = "concord-fastapi"
version = "0.1.0"
description = "API for using concord"
authors = ["matzhaugen <matzhaugen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.1"
uvicorn = "^0.11.5"
numpy = "^1.19.0"
scipy = "^1.5.1"
pyconcord = "^0.3"
pandas = "^1.0.5"
scalene = "^0.9.13"
requests = "^2.25.0"
humps = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
requests = "^2.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"