[tool.poetry]
name = "concord"
version = "0.1.0"
description = "API for using concord"
authors = ["matzhaugen <matzhaugen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.1"
uvicorn = "^0.11.5"
numpy = "^1.19.0"
scipy = "^1.5.1"
requests = "^2.24.0"
pandas = "^1.0.5"
psycopg2-binary = "^2.8.6"
alembic = "^1.4.3"
sqlalchemy = "^1.3.20"
importlib-metadata = "^3.1.1"
aiohttp = "^3.7.3"
ujson = "^4.0.1"
boto3 = "^1.16.51"
pgcopy = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
requests = "^2.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

